fetch one, post and update done
